fix: update alignment and height properties for better layout consistency

--- a/styles/board.css
+++ b/styles/board.css
@@ -76,10 +76,11 @@
 
 .order_board_sections {
   display: flex;
-  align-items: start;
+  align-items: stretch;
   width: 100%;
   gap: 30px;
   margin-top: 50px;
+  min-height: calc(100vh - 200px); 
 }
 
 .order_elements_in_section_header {
@@ -91,10 +92,11 @@
 
 .order_elements_in_section {
   display: flex;
-  align-items: start;
-  justify-content: flex-start;
+  /* align-items: start; */
+  /* justify-content: flex-start; */
   flex-direction: column;
   width: 22%;
+  height: auto;
 }
 
 .text_section {
@@ -105,8 +107,10 @@
 }
 
 .width_section {
-  width: 100%;
-  margin-top: 20px;
+ flex-grow: 1;      
+  display: flex; 
+  flex-direction: column;
+  min-height: 200px;
 }
 
 .no_task_available {
